# pandas_translate

./: pyproject.toml
pandas_translate/: translate.py
tutorial/: translate_df.ipynb  translate_text.ipynb
